Fix test configuration for Java 21 upgrade